# efficient-trees

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
efficient_trees/: enums.py  random_forest.py  tree.py
examples/: amex_default.py  et_vs_sklearn.py  heart_disease.py  iris.py  memory_profiling.py  memory_profiling_forest.py  memory_profiling_trees.py
examples/utils/: utils.py
tests/integration/: test_tree.py
